# coursework-ciphers_software

./: .gitignore  babel.cfg  ework-ciphers_software
API_cpp_py/: README.md
API_cpp_py/src/cpp/cipher_example_dll/: CMakeLists.txt  main_cipher_file.cpp
API_cpp_py/src/cpp/cipher_example_dll/Permutation/: CMakeLists.txt
API_cpp_py/src/cpp/cipher_example_dll/Permutation/src/: Permutation.cpp  Permutation.hpp
API_cpp_py/src/cpp/cipher_example_dll/cipher_exceptions/: CMakeLists.txt  cipher_exceptions.cpp  cipher_exceptions.hpp
API_cpp_py/src/cpp/cipher_example_dll/cipher_first/: CMakeLists.txt  HPC-cipher.cpp  HPC-cipher.hpp
API_cpp_py/src/cpp/cipher_example_dll/permutation_generator/: CMakeLists.txt  permutation_generator.cpp  permutation_generator.hpp
API_cpp_py/src/cpp/cutting_telegrams/: CMakeLists.txt  main_cutter.cpp
API_cpp_py/src/cpp/cutting_telegrams/tg_cutter/: CMakeLists.txt  telgrams_cutter.cpp  telgrams_cutter.hpp
API_cpp_py/src/py/: main.py
API_cpp_py/src/py/ciphers_api_module/: ciphers_api_module.py
API_cpp_py/src/py/include_ciphers/: HPC_cipher.pyd  telegrams_cutter.pyd
BoolMatrix/: CMakeLists.txt
BoolMatrix/src/: BoolMatrix.cpp  BoolMatrix.hpp
BoolMatrix/src/cipher_exceptions/: CMakeLists.txt  cipher_exceptions.cpp
Cardan_cipher/src/cpp/cipher_example_dll/: CMakeLists.txt  main_cipher_file.cpp
Cardan_cipher/src/cpp/cipher_example_dll/BoolMatrix/: CMakeLists.txt  README.md
Cardan_cipher/src/cpp/cipher_example_dll/BoolMatrix/src/: BoolMatrix.cpp  BoolMatrix.hpp  main.cpp
Cardan_cipher/src/cpp/cipher_example_dll/BoolMatrix/src/cipher_exceptions/: cipher_exceptions.hpp
Cardan_cipher/src/cpp/cipher_example_dll/boolmatrix_generator/: CMakeLists.txt  boolmatrix_generator.cpp  boolmatrix_generator.hpp
Cardan_cipher/src/cpp/cipher_example_dll/cipher_exceptions/: cipher_exceptions.cpp
Cardan_cipher/src/cpp/cipher_example_dll/cipher_second/: CMakeLists.txt  Cardan-cipher.cpp  Cardan-cipher.hpp
Cardan_cipher/src/py/: main.py
Cardan_cipher/src/py/include_ciphers/: Cardan_cipher.pyd
FastApi/: Config.env  app.py  exception_handlers.py  fullOpenText.txt  usersKeys.txt
FastApi/Ciphers/: Cardan_cipher.pyd  HPC_cipher.pyd
FastApi/ciphers_api_module/: ciphers_api_module.py  telegrams_cutter.pyd
FastApi/ciphers_api_module/requestsClass/: requestToEncript.py
FastApi/encript_resualts/: decryption-resualt.docx  resualt.docx
FastApi/file_converters/: docxToTxt.py  saveToDocx.py  saveTxtFile.py
FastApi/locale/: messages.pot
FastApi/locale/en/LC_MESSAGES/: messages.po
FastApi/locale/ru/LC_MESSAGES/: messages.po
FastApi/settings/: config.py  cpp_exceptions.pyd  exception_handlers.py
FastApi/static/: changeCipherScript.js  style.css
FastApi/templates/: main.html  select.html
Permutation/: README.md
Permutation/src/: Permutation.cpp  Permutation.hpp  main.cpp
Telegrams/: CMakeLists.txt  README.md  functions.cpp
Telegrams/src/: functions.cpp  functions.hpp  main.cpp  testText.txt
fileMapping/: CMakeLists.txt  fileMapping.cpp  fileMapping.hpp
file_converters/: docxToTxt.py  txtToDocx.py
homophone_cipher/: main.cpp
homophone_keys/: CMakeLists.txt  readme.md
homophone_keys/src/: generator.cpp  generator.hpp
mainWind/: main.html
