cmake_minimum_required(VERSION 3.10)
project(telegrams)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
add_compile_options(/utf-8)
add_compile_definitions(UNICODE _UNICODE)
#add_library(telegrams STATIC src/functions.cpp)
add_executable(telegrams src/main.cpp src/functions.cpp)
#target_include_directories(telegrams PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)